Class Design refactored